--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-loader": "^3.0.0",
     "eslint-plugin-svelte3": "^2.7.3",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "prettier-plugin-svelte": "^0.7.0",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
+    "svelte-preprocess": "^3.1.1",
     "webpack": "^4.7.0"
   }
 }
