--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "TODO",
+  "name": "modified-sapper-template",
   "description": "TODO",
   "version": "0.0.1",
   "scripts": {
-    "dev": "set NODE_ENV=development && sapper dev",
-    "build": "set NODE_ENV=production && sapper build",
+    "dev": "sapper dev",
+    "build": "sapper build",
     "export": "sapper export",
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
@@ -17,18 +17,20 @@
     "helmet": "^3.21.0"
   },
   "devDependencies": {
-    "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-loader": "^3.0.0",
+    "autoprefixer": "^9.6.1",
+    "eslint": "^6.4.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "1.18.2",
-    "prettier-plugin-svelte": "^0.7.0",
+    "postcss": "^7.0.18",
+    "postcss-load-config": "^2.1.0",
     "sapper": "^0.27.0",
+    "stylelint": "^11.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^3.1.1",
-    "webpack": "^4.7.0"
+    "webpack": "^4.40.2"
   }
 }
