--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "devDependencies": {
     "autoprefixer": "^9.6.1",
     "eslint": "^6.4.0",
+    "eslint-plugin-no-secrets": "^0.3.3",
     "eslint-plugin-svelte3": "^2.7.3",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.18",
+    "postcss-font-magician": "^2.2.2",
     "postcss-load-config": "^2.1.0",
     "sapper": "^0.27.0",
     "stylelint": "^11.0.0",
