--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "lint:js": "eslint --fix \"src\/**\/*\"",
+    "lint:scss": "stylelint --fix \"src\/components\/*\" \"src\/routes\/**\/*\""
   },
   "dependencies": {
     "compression": "^1.7.1",
